; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/thermal/extr_thermal_sys.c_thermal_cooling_device_type_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/thermal/extr_thermal_sys.c_thermal_cooling_device_type_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.thermal_cooling_device = type { i8* }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @thermal_cooling_device_type_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thermal_cooling_device_type_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.thermal_cooling_device*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.thermal_cooling_device* @to_cooling_device(%struct.device* %8)
  store %struct.thermal_cooling_device* %9, %struct.thermal_cooling_device** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load %struct.thermal_cooling_device*, %struct.thermal_cooling_device** %7, align 8
  %12 = getelementptr inbounds %struct.thermal_cooling_device, %struct.thermal_cooling_device* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %13)
  ret i32 %14
}

declare dso_local %struct.thermal_cooling_device* @to_cooling_device(%struct.device*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
